bogey filter and filter_block updated

--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -80,7 +80,7 @@ write_time=0.05;
 time_step_calc=fixed;
 ; fixed time step. if greater 0, then the time step is fixed no matter what.
 ; default is 0.0, so not used.
-dt_fixed=10e-4;
+dt_fixed=1e-3;
 ; largest time step, if you want to set one. dt is always smaller than that, if the
 ; value is greater 0. default is 0.0, so not used.
 dt_max=0.0;
@@ -121,7 +121,7 @@ Pr=0.71;
 ; dynamic viscosity
 mu0=1e-4;
 ; dissipation, 1=on, ...=off
-dissipation=1;            ;
+dissipation=0;            ;
 ; initial conditions:
 ; 1.)mask:
 ;	 sets initial conditions to 0 at the mask domain
@@ -150,7 +150,13 @@ filter_type=bogey_shock;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=1;
 ; bogey shock detector threshold
-r_th = 5e-3;
+r_th=1e-5;
+; bogey shock switch [tanh,abs]
+switch=tanh;
+; bogey detection method [divU,p]
+detector_method=divU;
+
+
 
 
 [VPM]
