added Params template

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -199,7 +199,11 @@ filter_type=no_filter;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=10;
 ; bogey shock detector threshold
-r_th = 5e-3;
+r_th= 1e-5;
+!if threshold is reached bogey-filter will be switch on [tanh,abs]
+switch=tanh;
+! bogey-filter detection method
+detector_method=divU
 
 
 [VPM]
