write out the filter strength sigma_x sigma_y at every saving point [bogey filter]

--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -41,8 +41,8 @@ non_uniform_mesh_correction=1;
 
 [DomainSize]
 ; size of computational domain. Important for both wabbit and the physics modules
-Lx=1.25;
-Ly=1;
+Lx=2.5;
+Ly=2.5;
 Lz=0;
 
 
@@ -155,7 +155,8 @@ r_th=1e-5;
 switch=tanh;
 ; bogey detection method [divU,p]
 detector_method=divU;
-
+; if 1 adaptive filter strength is saved in every field_IO
+save_filter_strength=1;
 
 
 
