filter is applied to variables in conservative formgit status

--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -49,9 +49,9 @@ Lz=0;
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=6;
+N_fields_saved=8;
 ; how are the fields labeled?
-field_names=rho Ux Uy p vort mask;
+field_names=rho Ux Uy p vort mask sigma_x sigma_y;
 
 
 [Statistics]
