add talor green vortex forcing, remove equal distribution from keyvalues unit tests, add computation of the divergence, make sure fields in PREPARE_SAVE_DATA are saved in right order

--- a/TESTING/acm/acm_cyl/acm_test.ini
+++ b/TESTING/acm/acm_cyl/acm_test.ini
@@ -49,9 +49,9 @@ Lz=0;
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=5;
+N_fields_saved=6;
 ; how are the fields labeled?
-field_names=Ux Uy p vor mask;
+field_names=Ux Uy p vor div mask;
 
 [ACM-new]
 ; speed of sound
