--- a/TESTING/acm/acm_cyl/acm_test_zcurve.ini
+++ b/TESTING/acm/acm_cyl/acm_test_zcurve.ini
@@ -51,7 +51,7 @@ Lz=0;
 ; how many fields are you going to save?
 N_fields_saved=5;
 ; how are the fields labeled?
-field_names=Ux Uy p vor mask;
+field_names=Ux Uy p vor div mask;
 
 [ACM-new]
 ; speed of sound
