swirl test swirls until T_swirl, not always T_max // cyclogenesis

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -106,6 +106,10 @@ y0=0.75;
 z0=0;
 ; velocity field for transportation, [swirl,constant]
 velocity=swirl;
+; if the velocity profile is the swirl test, one sometimes would want to compute
+; an incomplete swirl, i.e. Tmax and Tswirl to not agree. Set T_swirl here if you want
+; the default is the same as the simulation duration
+T_swirl=5.0;
 ; if constant velocity, these are the values (one per scalar)
 u0x=1.0;
 u0y=1.0;
@@ -176,10 +180,10 @@ dissipation=1;            ;
 ;	 sets initial conditions to 0 at the mask domain
 ; 2.)zeros:
 ;    sets initial velocitys to 0 regardles of initial_velocity
-; 3.)pressure_blob  
-; 	 pressure blob with diameter inicond_width   	  
-; 4.)sod_shock_tube  
-; 	 sets initial conditions according to [Sod,1978]   	              ; 	 
+; 3.)pressure_blob
+; 	 pressure blob with diameter inicond_width
+; 4.)sod_shock_tube
+; 	 sets initial conditions according to [Sod,1978]   	              ;
 inicond=mask;zeros;pressure_blob;sod_shock_tube
 inicond_width=0.01;
 initial_preasure=101330.0;
