--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -127,13 +127,13 @@ dissipation=0;            ;
 ;	 sets initial conditions to 0 at the mask domain
 ; 2.)zeros:
 ;    sets initial velocitys to 0 regardles of initial_velocity
-; 3.)pressure_blob  
-; 	 pressure blob with diameter inicond_width   	  
-; 4.)sod_shock_tube  
-; 	 sets initial conditions according to [Sod,1978]   	              ; 	 
+; 3.)pressure_blob
+; 	 pressure blob with diameter inicond_width
+; 4.)sod_shock_tube
+; 	 sets initial conditions according to [Sod,1978]   	              ;
 inicond=sod_shock_tube;zeros;pressure_blob;sod_shock_tube
 inicond_width=0.01;
-initial_preasure=101330.0;
+initial_pressure=101330.0;
 initial_velocity=50.0 0.0 0;
 initial_temperature=200;
 initial_density=1.645;
@@ -146,7 +146,7 @@ order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
 ; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
-filter_type=bogey_shock;
+filter_type=no_filter;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=1;
 ; bogey shock detector threshold
@@ -193,7 +193,7 @@ bridge=0 ;
 bridgeCommonMPI=0;
 
 ; Consideration of the particles side as master  (1,yes,true,T=true / 0,no,false,F=false)
-; Only needed if there is a bridge and no common world 
+; Only needed if there is a bridge and no common world
 bridgeFluidMaster=1;
 ; Command to use to launch the fluid program
 ; Only needed if bridge connection
