--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -146,7 +146,7 @@ order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
 ; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
-filter_type=no_filter;
+filter_type=bogey_shock;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=1;
 ; bogey shock detector threshold
@@ -201,7 +201,7 @@ particleCommand=pig;
 
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,
-debug=1;
+debug=0;
 ; unit tests
 test_time_stepper=0;
 test_spatial=0;
