--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -51,7 +51,7 @@ Lz=0;
 ; how many fields are you going to save?
 N_fields_saved=8;
 ; how are the fields labeled?
-field_names=rho Ux Uy p vort mask sigma_x sigma_y;
+field_names=rho Ux Uy p vort mask sigma-x sigma-y;
 
 
 [Statistics]
@@ -146,7 +146,7 @@ order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
 ; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
-filter_type=explicit_5pt;
+filter_type=bogey_shock;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=1;
 ; bogey shock detector threshold
