minor changes in Navier_stokes

--- a/TESTING/navier_stokes/pressure_blob/ns_test.ini
+++ b/TESTING/navier_stokes/pressure_blob/ns_test.ini
@@ -117,7 +117,7 @@ inicond_width=0.01;
 initial_preasure=101330.0;
 initial_velocity=0.0 0.0 0;
 initial_temperature=200;
-initial_density=1.645
+initial_density=1.645;
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
