added basic infrastructure for cylindrical coordinates in navier stokes

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -165,6 +165,10 @@ C_sp=0.001;
 
 
 [Navier_Stokes]
+; choose your coordinate_system
+;  + default cartesian 2D/3D = "cartesian"
+;  + cylindrical 2D = "cylindrical"
+Coordinate_system=cylindrical;
 ; adiabatic coefficient
 gamma_=1.4;
 ; specific gas constant
