removed unnecessary bridge parameters in global parameter structure

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -14,7 +14,7 @@ number_block_nodes=17;129;17;33;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=3;
+number_data_fields=4;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
@@ -193,7 +193,7 @@ inicond_width=0.01;
 initial_pressure=101330.0;
 initial_velocity=50.0 0.0 0;
 initial_temperature=200;
-initial_density=1.645
+initial_density=1.645;
 
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
@@ -243,17 +243,17 @@ mpi_data_exchange=Non_blocking_Isend_Irecv ;
 
 [BRIDGE]
 ; type 1 if a bridge shell be created and 0 if not
-bridge=0 ;
-; Usage of a common MPI_comm_world  (1,yes,true,T=true / 0,no,false,F=false)
-; Only needed if there is a bridge
-bridgeCommonMPI=0;
+connect_with_bridge=0;
+; The following parameters are only needed if there is a bridge
 
-; Consideration of the particles side as master  (1,yes,true,T=true / 0,no,false,F=false)
-; Only needed if there is a bridge and no common world
+; Usage of a common MPI_comm_world  (1,yes,true,T=true / 0,no,false,F=false)
+bridgeCommonMPI=0;
+; If bridgeFluidMaster is true WABBIT is seen as the master and will
+; spawn (split off) the processes of the other MPI_WORLD
+;  (1,yes,true,T=true / 0,no,false,F=false)
 bridgeFluidMaster=1;
-; Command to use to launch the fluid program
-; Only needed if bridge connection
-particleCommand=pig;
+; Command to use to launch the particle program (name of the executable)
+particleCommand=./pig;
 
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,
