--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -11,7 +11,7 @@ dim=2;
 ; size of each block, should be odd (17, 33, 65 etc)
 number_block_nodes=17;129;17;33;
 ; ghost nodes for each block
-number_ghost_nodes=6;
+number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
 number_data_fields=4;
@@ -49,16 +49,16 @@ Lz=0;
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=8;
+N_fields_saved=6;
 ; how are the fields labeled?
-field_names=rho Ux Uy p vort mask sigma-x sigma-y;
+field_names=rho Ux Uy p vort mask;
 
 
 [Statistics]
 ; save every nsave time steps (leave empty to disable)
-nsave_stats=10;
+nsave_stats=;
 ; and every tsave physical time units (leave empty to disable)
-tsave_stats=0.20;
+tsave_stats=;
 
 
 
@@ -80,7 +80,7 @@ write_time=0.05;
 time_step_calc=fixed;
 ; fixed time step. if greater 0, then the time step is fixed no matter what.
 ; default is 0.0, so not used.
-dt_fixed=1e-3;
+dt_fixed=0.5e-3;
 ; largest time step, if you want to set one. dt is always smaller than that, if the
 ; value is greater 0. default is 0.0, so not used.
 dt_max=0.0;
@@ -146,7 +146,7 @@ order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
 ; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
-filter_type=bogey_shock;
+filter_type=explicit_9pt;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=1;
 ; bogey shock detector threshold
