coarsening indicator modified - separate grid/block level, add vorticity criterion, read criterion from INI file, remove unused makefile dependencies

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -37,6 +37,10 @@ block_dist=sfc_hilbert;
 ; non uniform mesh correction: if 1 then wabbit synchronize redundant nodes
 ; at coarse blocks with data from fine blocks [ 1 | ... ]
 non_uniform_mesh_correction=1;
+; coarsening indicator to be used in mesh adaptation
+; threshold: evaluates wavelet criterion on all components of state vector
+; threshold-vorticity: evaluates wavelet criterion on vorticity
+coarsening_indicator=threshold;
 
 
 [DomainSize]
