add normalization for eps (optional) and provide interface to threshold only a part of the state vector

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -38,9 +38,16 @@ block_dist=sfc_hilbert;
 ; at coarse blocks with data from fine blocks [ 1 | ... ]
 non_uniform_mesh_correction=1;
 ; coarsening indicator to be used in mesh adaptation
-; threshold: evaluates wavelet criterion on all components of state vector
+; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; threshold-vorticity: evaluates wavelet criterion on vorticity
-coarsening_indicator=threshold;
+coarsening_indicator=threshold-state-vector;
+; use normalization for eps or not? normalization is done with INFTY norm currently. default
+; is no normalization (0). ATTENTION works only for ACM currently (TODO!)
+eps_normalized=1;
+; which components to use for coarsening_indicator? default is all components.
+; active only if coarsening_indicator=threshold-state-vector. select the components, set as
+; many as number_data_fields
+threshold_state_vector_component=1 1 0;
 
 
 [DomainSize]
