--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -19,7 +19,7 @@ number_data_fields=4;
 eps=1e-2;1e-4;
 ; treelevel bounds
 min_treelevel=1;
-max_treelevel=4;
+max_treelevel=3;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
@@ -146,7 +146,7 @@ order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
 ; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
-filter_type=wavelet;
+filter_type=bogey_shock;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=1;
 ; bogey shock detector threshold
