added triangle and rhombus geometry to ns_penalization

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -179,7 +179,7 @@ C_sp=0.001;
 ; choose your coordinate_system
 ;  + default cartesian 2D/3D = "cartesian"
 ;  + cylindrical 2D = "cylindrical"
-Coordinate_system=cylindrical;
+Coordinate_system=cartesian;
 ; adiabatic coefficient
 gamma_=1.4;
 ; specific gas constant
@@ -244,12 +244,16 @@ smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; geometry
-geometry=cylinder;
-; center coordinate for cylinder
-x_cntr=5 5 0;
+; geometry: [funnel,triangle,circle,rhombus]
+geometry=triangle;
+; center coordinate of object
+x_cntr=0.5 0.5 0;
+; [triangle,rhombus]: angle between symmetry axis and triangle side (in degrees please)
+angle=30;
+; [triangle,rhombus]: length of the object
+length=0.3
 ; radius of cylinder
-R_cyl=0.5;
+R_cyl=0.2;
 
 
 [MPI]
