--- a/TESTING/navier_stokes/filter/filter_test.ini
+++ b/TESTING/navier_stokes/filter/filter_test.ini
@@ -95,6 +95,14 @@ dt_max=0.0;
 ; 0.0 0.16666666666666666 0.33333333333333331 0.33333333333333331  0.16666666666666666 /)
 
 
+[Sponge]
+; sponge term, used in ACM module to mimick outflow conditions for pressure waves
+use_sponge=0;
+L_sponge=0.1;
+C_sponge=1.0e-3;
+
+
+
 [Physics]
 ; what physics module is used?
 ; [ACM-new, ConvDiff-new, navier_stokes]
@@ -105,10 +113,6 @@ physics_type=navier_stokes;
 initial_cond=physics-module;
 ; input files that contain treecode, time, iteration, number of blocks and initial field
 input_files=rho_.h5 Ux_.h5 Uy_.h5 p_.h5;
-; sponge (yes=1, no=0)
-sponge_layer=1;
-; sponge parameter
-C_sp=0.001;
 
 
 [Navier_Stokes]
