is it a bug or a feature?

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -244,7 +244,7 @@ smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; geometry: [funnel,triangle,circle,rhombus]
+; geometry: [funnel,triangle,cylinder,rhombus]
 geometry=triangle;
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
