major: add friend concept for ghost node buffers minor: bunch of new improved unit tests, data generated with --staging NOTE: one test fails, that is indeed a big problem

--- a/TESTING/acm/acm_cyl_nonequi/acm_test.ini
+++ b/TESTING/acm/acm_cyl_nonequi/acm_test.ini
@@ -18,10 +18,10 @@ number_data_fields=3;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
-max_treelevel=6;
+max_treelevel=5;
 min_treelevel=1;
 ; switch for mesh adaption, 1=on, ...=off
-adapt_mesh=1;
+adapt_mesh=0;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
 ; default is same value as adapt_mesh
 adapt_inicond=1;
@@ -61,9 +61,11 @@ nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
 gamma_p=1;
 ; use mean flow forcing
-forcing=1;
+forcing=0;
+u_mean_set=1.0 1.0 0.0;
 ; initial condition
 inicond=meanflow;
+p_mean_zero=yes;
 
 
 [Time]
