--- a/TESTING/acm/acm_cyl_adaptive/acm_test.ini
+++ b/TESTING/acm/acm_cyl_adaptive/acm_test.ini
@@ -18,7 +18,7 @@ number_data_fields=3;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
-max_treelevel=6;
+max_treelevel=5;
 min_treelevel=1;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=1;
@@ -33,7 +33,7 @@ inicond_refinements=0;
 ; equal -> simple uniformly distribution
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
-block_dist=sfc_z;
+block_dist=sfc_hilbert;
 ; non uniform mesh correction: if 1 then wabbit synchronize redundant nodes
 ; at coarse blocks with data from fine blocks [ 1 | ... ]
 non_uniform_mesh_correction=1;
@@ -53,7 +53,6 @@ N_fields_saved=6;
 ; how are the fields labeled?
 field_names=Ux Uy p vor div mask;
 
-
 [ACM-new]
 ; speed of sound
 c_0=50.0;
@@ -61,25 +60,13 @@ c_0=50.0;
 nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
 gamma_p=1;
-; use mean flow forcing or not
-forcing=1;
-; what method to use for forcing? available: accelerate / none / fixed
-; specifiy at least Dim entries for each component
-forcing_type=accelerate none none;
-; if mean flow forcing is used, this is the values for the mean velocities:
-u_mean_set=1.0 0.0 0.0;
+; use mean flow forcing
+forcing=0;
+u_mean_set=1.0 1.0 0.0;
 ; initial condition
 inicond=meanflow;
-; the mean pressure has no meaning in incompressible fluids, but sometimes it can
-; be nice to ensure the mean is zero, e.g., for comparison wit other codes. if set to true
-; wabbit removes the mean pressure at every time step.
-p_mean_zero=no;
+p_mean_zero=yes;
 
-[Sponge]
-; sponge term, used in ACM module to mimick outflow conditions for pressure waves
-use_sponge=0;
-L_sponge=0.1;
-C_sponge=1.0e-2;
 
 [Time]
 ; final time to reach in simulation
@@ -125,13 +112,6 @@ order_discretization=FD_4th_central_optimized;
 order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
-; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
-filter_type=no_filter;
-; filter frequency (note: set to very high value to dissable filtering
-filter_freq=10;
-; bogey shock detector threshold
-r_th = 5e-3;
-
 
 [VPM]
 ; Volume penalization method to take obstacles into account without adapting the
