--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -203,6 +203,10 @@ dissipation=1;            ;
 ; 	 set initial conditions (rho_0,u_0,p_0) and the shear layer width from inifile;
 ; 6.)simple-shock
 ;    produces standing shock (1D) in x direction, specify inicond_(pressure,velocity,density);
+; 6.)moving-shock
+;    produces moving shock (1D) in x direction with nomr(initial_velocity) specifies shock speed
+;    specify inicond_(pressure,velocity,density);
+
 inicond=mask;zeros;pressure_blob;sod_shock_tube
 inicond_width=0.01;
 initial_pressure=101330.0;
@@ -218,7 +222,7 @@ order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
 ; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
-filter_type=no_filter;
+filter_type=bogey_filter;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=10;
 ; bogey shock detector threshold
