some changes in NS

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -205,7 +205,8 @@ dissipation=1;            ;
 ;    produces standing shock (1D) in x direction, specify inicond_(pressure,velocity,density);
 ; 6.)moving-shock
 ;    produces moving shock (1D) in x direction with nomr(initial_velocity) specifies shock speed
-;    specify inicond_(pressure,velocity,density);
+;    specify inicond_(pressure,velocity,density,inicond_width)
+;    inicond_width is the location of the shock x=inicond_width*Lx
 
 inicond=mask;zeros;pressure_blob;sod_shock_tube
 inicond_width=0.01;
