ghost nodes: do not use one-sided interpolation, use smallest interpolation bound possible on sender side

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -8,9 +8,10 @@ dim=2;
 
 
 [Blocks]
-; size of each block, should be odd (17, 33, 65 etc)
-number_block_nodes=17;129;17;33;
-; ghost nodes for each block
+; size of each block, must be odd (17, 33, 65 etc)
+number_block_nodes=17;
+; ghost nodes for each block. It is possible that in current versions, one can only
+; set even values
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
