N_friends now read from parameter file, grid routines from Ini module now part of mesh module

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -263,8 +263,13 @@ R_cyl=0.2;
 
 
 [MPI]
-; method for data exchange [ RMA_lock_unlock_get | RMA_lock_unlock_put | Non_blocking_Isend_Irecv ]
-mpi_data_exchange=Non_blocking_Isend_Irecv ;
+; Just because we have MPISIZE ranks does not mean that everybody talks to everybody.
+; While this CAN happen, it is much more likely that an MPIRANK talks only to a limited number of
+; "friends". This is a direct consequence of the space-filling curves. Therefore, we do not allocate
+; buffer for all MPSIZE ranks, but only for N_FRIENDS. If the number happens to be too small, we increase
+; it dynamically (via deallocate / reallocate)
+; note that N_friends = min( params%number_procs, params%N_friends )
+Nfriends=20;
 
 [BRIDGE]
 ; type 1 if a bridge shell be created and 0 if not
