add warning to check_redundant_nodes and possibility to disable it

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -229,11 +229,11 @@ filter_type=bogey_filter;
 filter_freq=10;
 ; bogey shock detector threshold
 r_th= 1e-5;
-!if threshold is reached bogey-filter will be switch on [tanh,abs]
+; if threshold is reached bogey-filter will be switch on [tanh,abs]
 switch=tanh;
-! bogey-filter detection method
+; bogey-filter detection method
 detector_method=divU
-! write out sigma for every n filter iterations (if 0 then sigma is not written out)
+; write out sigma for every n filter iterations (if 0 then sigma is not written out)
 save_filter_strength=1
 
 
@@ -294,3 +294,4 @@ test_spatial=0;
 test_wavelet_comp=0;
 test_ghost_nodes_synch=1;
 test_treecode=0;
+check_redundant_nodes=1;
