cosmetics in memory allocation

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -269,7 +269,7 @@ R_cyl=0.2;
 ; buffer for all MPSIZE ranks, but only for N_FRIENDS. If the number happens to be too small, we increase
 ; it dynamically (via deallocate / reallocate)
 ; note that N_friends = min( params%number_procs, params%N_friends )
-Nfriends=20;
+N_friends=20;
 
 [BRIDGE]
 ; type 1 if a bridge shell be created and 0 if not
