--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -74,9 +74,10 @@ tsave_stats=0.20;
 
 
 [ACM-new]
-; speed of sound
+; speed of sound, used also for the CFL condition. NOTE: if c_0 ~ u, then the CFL
+; condition may be wrongly estimated, since the eigenvalues are actually different
 c_0=50.0;
-; viscosity
+; viscosity. We also respect the time step constraint imposed by explicit diffusion
 nu=1e-2;
 ; damping term for pressure, see [Ohwada, Asinari, JCP2010]
 gamma_p=1;
