--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -35,9 +35,6 @@ inicond_refinements=0;
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
-; non uniform mesh correction: if 1 then wabbit synchronize redundant nodes
-; at coarse blocks with data from fine blocks [ 1 | ... ]
-non_uniform_mesh_correction=1;
 ; coarsening indicator to be used in mesh adaptation
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; threshold-vorticity: evaluates wavelet criterion on vorticity
@@ -49,6 +46,9 @@ eps_normalized=1;
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
 ; many as number_data_fields
 threshold_state_vector_component=1 1 0;
+; if this flag is set (1), then blocks on max level have to coarsen, even if their
+; details are significant. This is equivalent to ensuring dealiasing.
+force_maxlevel_dealiasing=0;
 
 
 [DomainSize]
