--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -35,6 +35,10 @@ inicond_refinements=0;
 ; sfc_z  -> space filling curve -> z-curve
 ; sfc_hilbert -> hilbert space filling curve
 block_dist=sfc_hilbert;
+; it can be expensive to balance the load and cheaper to live with a slight imbalance.
+; Therefore, you can call loadbalancing only every couple of time steps. This parameter
+; should affect only the computational cost and not the result.
+loadbalancing_frequ=1;
 ; coarsening indicator to be used in mesh adaptation
 ; threshold-state-vector: evaluates wavelet criterion on components of state vector. specify below which ones.
 ; threshold-vorticity: evaluates wavelet criterion on vorticity
@@ -132,6 +136,8 @@ u0z=0.0;
 [Time]
 ; final time to reach in simulation
 time_max=3;
+; maximum walltime allowed for simulations (in hours)
+walltime_max=999.0;
 ; number of time steps performed. if not set, default value is very large
 nt=300;
 ; CFL criterium
