add pressure blob inicond for ACM

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -98,6 +98,8 @@ inicond=meanflow;
 ; be nice to ensure the mean is zero, e.g., for comparison wit other codes. if set to true
 ; wabbit removes the mean pressure at every time step.
 p_mean_zero=no;
+; if inicond= pressure-blob
+beta=0.05;
 
 
 [Sponge]
