Part1: module_boundary_conditions for enabling bc in WABBIT. extended paramsstructure, includes check if block is adjacent to domain boundary

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -53,6 +53,10 @@ threshold_state_vector_component=1 1 0;
 ; if this flag is set (1), then blocks on max level have to coarsen, even if their
 ; details are significant. This is equivalent to ensuring dealiasing.
 force_maxlevel_dealiasing=0;
+; if this flag is set (1), then WABBIT assumes there are no boundaries, i.e. grid is continued
+; periodicaly
+; if flag is 0; WABBIT assumes pressents of BC on all domain_walls
+periodic_BC=1;
 
 
 [DomainSize]
