--- a/TESTING/conv/blob_3D_equi/blob3d.ini
+++ b/TESTING/conv/blob_3D_equi/blob3d.ini
@@ -2,9 +2,10 @@
 ; if you add new parameters, add them here.
 ; note values have to be declared "value=0;", with equal sign (=) and semicolon (;)
 
-[Dimensionality]
+[Domain]
 ; 2D or 3D problem?
 dim=3;
+domain_size=1 1 1;
 
 
 [Blocks]
@@ -50,11 +51,6 @@ eps_normalized=0;
 threshold_state_vector_component=1;
 
 
-[DomainSize]
-; size of computational domain. Important for both wabbit and the physics modules
-Lx=1;
-Ly=1;
-Lz=1;
 
 
 [Saving]
