--- a/TESTING/navier_stokes/filter/explicit_7pt/explicit_7pt.ini
+++ b/TESTING/navier_stokes/filter/explicit_7pt/explicit_7pt.ini
@@ -2,9 +2,10 @@
 ; if you add new parameters, add them here.
 ; note values have to be declared "value=0;", with equal sign (=) and semicolon (;)
 
-[Dimensionality]
+[Domain]
 ; 2D or 3D problem?
 dim=2;
+domain_size=2.5 2.5 0;
 
 
 [Blocks]
@@ -39,11 +40,6 @@ block_dist=sfc_hilbert;
 non_uniform_mesh_correction=1;
 
 
-[DomainSize]
-; size of computational domain. Important for both wabbit and the physics modules
-Lx=2.5;
-Ly=2.5;
-Lz=0;
 
 
 [Saving]
