--- a/TESTING/navier_stokes/pressure_blob/ns_test.ini
+++ b/TESTING/navier_stokes/pressure_blob/ns_test.ini
@@ -5,7 +5,7 @@
 [Domain]
 ; 2D or 3D problem?
 dim=2;
-domain_size=6 3 0;
+domain_size=6 3;
 
 
 [Blocks]
@@ -45,9 +45,9 @@ non_uniform_mesh_correction=1;
 [Saving]
 ; TODO: maybe this section is clumsy and should be revised.
 ; how many fields are you going to save?
-N_fields_saved=6;
+N_fields_saved=5;
 ; how are the fields labeled?
-field_names=rho Ux Uy p vort mask;
+field_names=rho Ux Uy p vort;
 
 [Time]
 ; final time to reach in simulation
