reorganized nstokes, added some comments

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -264,11 +264,8 @@ geometry=triangle;
 x_cntr=0.5 0.5 0;
 ; [triangle,rhombus]: angle between symmetry axis and triangle side (in degrees please)
 angle=30;
-; [triangle,rhombus]: length of the object
+; [triangle,rhombus,cylinder]: length or diameter of the object
 length=0.3
-; radius of cylinder
-R_cyl=0.2;
-
 
 [MPI]
 ..
