--- a/TESTING/navier_stokes/filter/bogey_shock/bogey_shock.ini
+++ b/TESTING/navier_stokes/filter/bogey_shock/bogey_shock.ini
@@ -122,6 +122,8 @@ Pr=0.71;
 mu0=1e-4;
 ; dissipation, 1=on, ...=off
 dissipation=0;            ;
+; which case do you want to study
+case=shock_tube;
 ; initial conditions:
 ; 1.)mask:
 ;	 sets initial conditions to 0 at the mask domain
