--- a/TESTING/navier_stokes/funnel/ion_funnel_light.ini
+++ b/TESTING/navier_stokes/funnel/ion_funnel_light.ini
@@ -115,7 +115,11 @@ Pr=0.71;
 mu0=1e-8;
 ; dissipation, 1=on, ...=off
 dissipation=1;
-             ;
+; the navier stokes module provides different scenarios (/cases), with special initial conditions
+; penalization, boundary conditions, etc. Not all cases have the same specifications, therefore we
+; have to distinguish between them:
+; [funnel, shock_test, pressure_blob, simple_geometry ]
+case=funnel;
 ; initial conditions:
 ; 1.)mask:
 ;	 sets initial conditions to 0 at the mask domain
@@ -175,7 +179,7 @@ radius=0.025;
 
 [MPI]
 ; method for data exchange [ RMA_lock_unlock_get | RMA_lock_unlock_put | Non_blocking_Isend_Irecv ]
-mpi_data_exchange=Non_blocking_Isend_Irecv ;
+mpi_data_exchange=Non_blocking_Isend_Irecv;
 
 
 [Debug]
@@ -197,12 +201,11 @@ Number_of_plates=21;
 Number_of_focus_plates=40;
 Temperatur_of_plates=200;
 jet_diameter=0.004;
-inlet_velocity=300 0;
+inlet_velocity=300 0 0;
 inlet_density=0.645;
 inlet_pressure=32000;
 outlet_pressure=1000.0;
 pump_speed=150.17;
-
 plates_thickness=0.0044;
 first_plate_thickness=0.012;
 distance_between_plates=0.0028;
