some changes to adaptiv dt in 3d Nstokes and colored masks in Nstokes

--- a/TESTING/navier_stokes/pressure_blob/3D/pressure_blob3D.ini
+++ b/TESTING/navier_stokes/pressure_blob/3D/pressure_blob3D.ini
@@ -17,10 +17,10 @@ number_ghost_nodes=4;
 ; adjust this value for the physics module that you use.
 number_data_fields=5;
 ; threshold value for thresholding wavelet coefficients
-eps=1e-3;1e-4;
+eps=1e5;1e-4;
 ; treelevel bounds
 max_treelevel=2;
-min_treelevel=1;
+min_treelevel=2;
 ; switch for mesh adaption, 1=on, ...=off
 adapt_mesh=0;
 ; adaptive initial conditon? i.e. create grid to respect error bounds
@@ -28,7 +28,7 @@ adapt_mesh=0;
 adapt_inicond=1;
 ; in some situations, it is necessary to create the intial grid, and then refine it for a couple of times.
 ; for example if one does non-adaptive non-equidistant spatial convergence tests. default is 0.
-inicond_refinements=0;
+inicond_refinements=1;
 ; block distribution for balancing (also used for start distribution)
 ; [equal | sfc_z | sfc_hilbert]
 ; equal -> simple uniformly distribution
@@ -52,22 +52,22 @@ field_names=rho Ux Uy Uz p vort;
 
 [Time]
 ; final time to reach in simulation
-time_max=0.001;
+time_max=0.01;
 ; number of time steps performed. if not set, default value is very large
 nt=;
 ; CFL criterium
-CFL=1.5;
+CFL=1.3;
 ; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
 write_method=fixed_time;
 ; write frequency for output, choose very large number for disabling output on disk
 write_freq=;
 ; write time for output
-write_time=0.001;
+write_time=0.005;
 ; method to calculate time step [ fixed | CFL_cond | lvl_fixed ]
-time_step_calc=fixed;
+time_step_calc=CFL_cond;
 ; fixed time step. if greater 0, then the time step is fixed no matter what.
 ; default is  pa 0.0, so not used.
-dt_fixed=0.1e-4;
+dt_fixed=;
 ; largest time step, if you want to set one. dt is always smaller than that, if the
 ; value is greater 0. default is 0.0, so not used.
 dt_max=0.0;
