--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -229,7 +229,7 @@ order_discretization=FD_4th_central_optimized;
 order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
-; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | wavelet | bogey_shock]
+; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock]
 filter_type=bogey_filter;
 ; filter frequency (note: set to very high value to dissable filtering
 filter_freq=10;
