add filter to ACM, work on documentation at some places

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -57,7 +57,11 @@ eps_normalized=1;
 ; many as number_data_fields
 threshold_state_vector_component=1 1 0;
 ; if this flag is set (1), then blocks on max level have to coarsen, even if their
-; details are significant. This is equivalent to ensuring dealiasing.
+; details are significant. This is equivalent to ensuring dealiasing. Hence, if set to 1,
+; wabbit will evaluate the right hand side of your equation on max_treelevel, but in the mesh
+; coarsening it will, regardless of the solution, downsample the result to max_treelevel-1. Your
+; expected precision is thus max_treelevel-1, but the computational cost (derivatives and timestep)
+; is on max_treelevel.
 force_maxlevel_dealiasing=0;
 
 
@@ -176,10 +180,6 @@ physics_type=ACM-new;
 initial_cond=physics-module;
 ; input files that contain treecode, time, iteration, number of blocks and initial field
 input_files=rho_000000000141.h5 Ux_000000000141.h5 Uy_000000000141.h5 p_000000000141.h5;
-; sponge (yes=1, no=0)
-sponge_layer=1;
-; sponge parameter
-C_sp=0.001;
 
 
 [Navier_Stokes]
@@ -222,6 +222,7 @@ initial_velocity=50.0 0.0 0;
 initial_temperature=200;
 initial_density=1.645;
 
+
 [Discretization]
 ; order of derivatives [ FD_2nd_central | FD_4th_central_optimized ]
 order_discretization=FD_4th_central_optimized;
@@ -229,12 +230,17 @@ order_discretization=FD_4th_central_optimized;
 order_predictor=multiresolution_4th;
 ; boundary condition [ periodic ]
 boundary_cond=periodic;
-; filter type [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock]
+; filtering of equations. NOTE: the filters are PHYSICS MODULE SPECIFIC! Hence it depends on the module
+; which values you can set here.
+; cNS: [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock]
+; ACM: [no_filter | wavelet_filter ]
+; ConvDiff: not implemented
 filter_type=bogey_filter;
-; filter frequency (note: set to very high value to dissable filtering
+; filter frequency (note: set filter to no_filter if you want to disable filtering completely)
+; Note our clumsy nomenclature: we mean filtering every "filter_freq" time steps
 filter_freq=10;
 ; bogey shock detector threshold
-r_th= 1e-5;
+r_th=1e-5;
 ; if threshold is reached bogey-filter will be switch on [tanh,abs]
 switch=tanh;
 ; bogey-filter detection method
@@ -245,18 +251,21 @@ save_filter_strength=1
 
 [VPM]
 ; Volume penalization method to take obstacles into account without adapting the
-; grid. Penalization is an equation-dependent addon. It can not be used with all
+; grid. Penalization is an equation-dependent addon. It can not be used with any
 ; RHS, if the RHS does not support it.
 ; flag for penalization (0/1)
 penalization=1;
 ; smooth mask for penalization term [0,1]. If the obstacle moves, this flag should
 ; be set, and in static cases as well. hard masks with only 0 and 1 are deprecated but
-; included for completeness.
+; included for completeness. Note some mask functions may ignore this flag (the insects for example)
 smooth_mask=1;
 ; penalization factor. Can be seen as porosity, so smaller values = harder walls
 ; Note for explicit time integration, dt < C_eta
 C_eta=1e-3;
-; geometry: [funnel,triangle,cylinder,rhombus]
+; The mask geometry is PHYSICS MODULE SPECIFIC! Hence it depends on the module which values you can set.
+; cNS: [funnel,triangle,cylinder,rhombus]
+; ACM: [none,Insect,cylinder,two-cylinders] if "Insect", all other parameters are read from "Insect" section.
+; ConvDiff: not implemented
 geometry=triangle;
 ; center coordinate of object
 x_cntr=0.5 0.5 0;
@@ -281,6 +290,65 @@ bridgeCommonMPI=0;
 bridgeFluidMaster=1;
 ; Command to use to launch the particle program (name of the executable)
 particleCommand=./pig;
+
+
+
+[Insects]
+; NOTE: Those parameters are used only in ACM and only if VPM::geometry=Insect
+;-------------------------------------------------------------------------------
+; Body geometry
+x_pivot_r=0.0 0.0 0.0; (vector) position of right wing in body system
+x_pivot_l=0.0 0.0 0.0; (vector) position of left wing in body system
+; Body (types: ellipsoid, drosophila, nobody)
+BodyType=nobody;
+HasDetails=all; legs; antennae_proboscis; no;
+RightWing=yes;
+LeftWing=no;
+b_body=0.2;
+L_body=1.0;
+R_head=0.20;
+R_eye=0.075;
+x_head=0.0 0.0 0.0; (vector)
+x_eye_r=; (vector)
+x_eye_l=; (vector)
+J_body_yawpitchroll=1.0 1.0 1.0; Body moment of inertia in body reference frame
+mass=1.0; total mass of animal
+gravity=1.0; negative: falling in negative z-direction
+;-------------------------------------------------------------------------------
+; Wing geometry (Shapes: rectangular, TwoEllipses, drosophila, drosophila_mutated,
+; drosophila_sandberg, drosophila_maeda, flapper_sane)
+WingShape=suzuki;
+b_top=0.1; if WingShape=TwoEllipses, that's thickness of the forward one
+b_bot=0.3; if WingShape=TwoEllipses, that's thickness of the backward one
+L_chord=1.0;
+L_span=1.0;
+WingThickness=0.0417; # FOR suzukis TESTCASE, THIS IS A CONSTANT!!
+; wing inertia tensor (used to compute inertial power)
+Jxx=0.0560;
+Jyy=0.0031;
+Jzz=0.0591;
+Jxy=0.0061;
+;-------------------------------------------------------------------------------
+; Body motion
+; motion of the body: (tethered, free_flight)
+BodyMotion=tethered;
+x0=2 2 2; initial (or tethered) position
+v0=0 0 0; inital velocity
+yawpitchroll_0=45.0 -45.0 0.0; initial (or tethered) orientation in degrees
+eta0=-45.00; stroke plane angle in degrees
+DoF=000000; x,y,z,yaw,pitch,roll DoF on=1 or off=0
+;-------------------------------------------------------------------------------
+; Wing motion
+; (types: Drosophila_hovering_fry, Drosophila_hovering_maeda, flapper_sane,
+; flapper_dickinson, takeoff, simplified, from_file, none)
+FlappingMotion_right=suzuki;
+FlappingMotion_left=suzuki;
+; if flappingmotion=="from_file", which file to use?
+infile=bumblebee_new_kinematics.ini;
+;-------------------------------------------------------------------------------
+
+
+
 
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,
