--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -138,49 +138,6 @@ u0y=1.0;
 u0z=0.0;
 
 
-[Time]
-; final time to reach in simulation
-time_max=3;
-; maximum walltime allowed for simulations (in hours)
-walltime_max=999.0;
-; number of time steps performed. if not set, default value is very large
-nt=300;
-; CFL criterium
-CFL=1.5;
-; write method (write with fixed frequency or time ) [ fixed_freq | fixed_time ]
-write_method=fixed_freq;
-; write frequency for output, choose very large number for disabling output on disk
-write_freq=2;
-; write time for output
-write_time=0.10;
-; fixed time step. if greater 0, then the time step is fixed no matter what.
-; default is 0.0, so not used.
-dt_fixed=0.0;
-; largest time step, if you want to set one. dt is always smaller than that, if the
-; value is greater 0. default is 0.0, so not used.
-dt_max=0.0;
-
-; butcher_tableau
-; use your butcher_tableau for the Runge Kutta time step function
-; e.g. RK4:
-; butcher_tableau=(/ 0.0 0.0 0.0 0.0 0.0
-; 0.5 0.5 0.0 0.0 0.0
-; 0.5 0.0 0.5 0.0 0.0
-; 1.0 0.0 0.0 1.0 0.0
-; 0.0 0.16666666666666666 0.33333333333333331 0.33333333333333331  0.16666666666666666 /)
-
-
-[Physics]
-; what physics module is used?
-; [ACM-new, ConvDiff-new, navier_stokes]
-physics_type=ACM-new;
-; initial condition can be set by the physics module or read from file. in the former
-; case details are given in the corrsponding subsection for each physics module.
-; [ physics-module | read_from_files]
-initial_cond=physics-module;
-; input files that contain treecode, time, iteration, number of blocks and initial field
-input_files=rho_000000000141.h5 Ux_000000000141.h5 Uy_000000000141.h5 p_000000000141.h5;
-
 
 
 [Navier_Stokes]
@@ -197,7 +154,9 @@ Pr=0.71;
 ; dynamic viscosity
 mu0=1e-2;
 ; dissipation, 1=on, ...=off
-dissipation=1;            ;
+dissipation=1;
+; case studies of the NStokes module
+case=funnel;
 ; initial conditions:
 ; 1.)mask:
 ;	 sets initial conditions to 0 at the mask domain
@@ -232,10 +191,10 @@ order_predictor=multiresolution_4th;
 boundary_cond=periodic;
 ; filtering of equations. NOTE: the filters are PHYSICS MODULE SPECIFIC! Hence it depends on the module
 ; which values you can set here.
-; cNS: [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock]
+; cNS: [no_filter | explicit_5pt | explicit_7pt | explicit_9pt | explicit_11pt | bogey_shock | wavelet_filter]
 ; ACM: [no_filter | wavelet_filter ]
 ; ConvDiff: not implemented
-filter_type=bogey_filter;
+filter_type=;
 ; filter frequency (note: set filter to no_filter if you want to disable filtering completely)
 ; Note our clumsy nomenclature: we mean filtering every "filter_freq" time steps
 filter_freq=10;
@@ -345,6 +304,30 @@ FlappingMotion_left=suzuki;
 ; if flappingmotion=="from_file", which file to use?
 infile=bumblebee_new_kinematics.ini;
 ;-------------------------------------------------------------------------------
+
+
+[funnel]
+; NOTE: Those parameters are used only in Nstokes and only if [Navier_Stokes]::case=Funnel
+;-------------------------------------------------------------------------------
+outer_diameter=0.05;
+maximal_inner_diameter=0.03;
+minimal_inner_diameter=0.0025;
+Number_of_plates=41;
+Temperatur_of_plates=50;
+jet_diameter=0.001;
+inlet_velocity=400 0;
+inlet_density=0.545;
+inlet_pressure=33000;
+outlet_pressure=1000.0;
+pump_speed=200;
+
+plates_thickness=0.0011;
+first_plate_thickness=0.003;
+distance_between_plates=0.0025;
+diameter_slope_per_plate=0.002;
+
+
+
 
 [Debug]
 ; 1 ... debuging for time measurements and testcases is active,
