removed params%inicond in WABBIT core structure, changed some names in the params structure and renamed number_data_fields in infile to number_equations

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -18,10 +18,10 @@ periodic_BC=1;
 number_block_nodes=17;
 ; ghost nodes for each block. It is possible that in current versions, one can only
 ; set even values
-number_ghost_nodes=4;
+number_ghosts_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=4;
+number_equations=4;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
@@ -54,7 +54,7 @@ coarsening_indicator=threshold-state-vector;
 eps_normalized=1;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
-; many as number_data_fields
+; many as number_equations
 threshold_state_vector_component=1 1 0;
 ; if this flag is set (1), then blocks on max level have to coarsen, even if their
 ; details are significant. This is equivalent to ensuring dealiasing. Hence, if set to 1,
@@ -69,11 +69,10 @@ force_maxlevel_dealiasing=0;
 ; what physics module is used?
 ; [ACM-new, ConvDiff-new, navier_stokes]
 physics_type=navier_stokes;
-; initial condition can be set by the physics module or read from file. in the former
-; case details are given in the corrsponding subsection for each physics module.
-; [ physics-module | read_from_files]
-initial_cond=physics-module;
-; input files that contain treecode, time, iteration, number of blocks and initial field
+; decide if you want to start from a given configuration (i.e. Statevector)
+; 1:true, 0:false and we start from iniconditions
+read_from_files=0;
+; if read_from_files is true, WABBIT will try to start from the given files
 input_files=rho_000000000141.h5 Ux_000000000141.h5 Uy_000000000141.h5 p_000000000141.h5;
 
 
@@ -125,7 +124,7 @@ C_sponge=1.0e-2;
 
 
 [ConvectionDiffusion]
-; how many scalar fields do you want to solve? should be the same as number_data_fields
+; how many scalar fields do you want to solve? should be the same as number_equations
 ; above.
 N_scalars=1;
 ; note you need to specify one value per scalar field for ALL the below parameters
@@ -254,8 +253,6 @@ angle=30;
 ; [triangle,rhombus,cylinder]: length or diameter of the object
 length=0.3
 
-[MPI]
-..
 
 [BRIDGE]
 ; type 1 if a bridge shell be created and 0 if not
