--- a/TESTING/acm/bumblebee_adaptive/insect.ini
+++ b/TESTING/acm/bumblebee_adaptive/insect.ini
@@ -28,7 +28,7 @@ number_block_nodes=17;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=4;
+number_equations=4;
 ; threshold value for thresholding wavelet coefficients
 eps=1.0e-1;
 ; treelevel bounds
@@ -57,7 +57,7 @@ coarsening_indicator=threshold-state-vector;
 eps_normalized=1;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
-; many as number_data_fields
+; many as number_equations
 threshold_state_vector_component=1 1 1 0;
 ; if this flag is set (1), then blocks on max level have to coarsen, even if their
 ; details are significant. This is equivalent to ensuring dealiasing.
