--- a/TESTING/acm/acm_cyl_adaptive/acm_test_zcurve.ini
+++ b/TESTING/acm/acm_cyl_adaptive/acm_test_zcurve.ini
@@ -15,7 +15,7 @@ number_block_nodes=17;129;17;33;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=3;
+number_equations=3;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
