--- a/TESTING/conv/blob_3D_adaptive/blob3d.ini
+++ b/TESTING/conv/blob_3D_adaptive/blob3d.ini
@@ -15,7 +15,7 @@ number_block_nodes=17;129;17;33;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=1;
+number_equations=1;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-5;
 ; treelevel bounds
@@ -47,7 +47,7 @@ coarsening_indicator=threshold-state-vector;
 eps_normalized=0;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
-; many as number_data_fields
+; many as number_equations
 threshold_state_vector_component=1;
 
 
@@ -98,7 +98,7 @@ C_sponge=1.0e-2;
 
 
 [ConvectionDiffusion]
-; how many scalar fields do you want to solve? should be the same as number_data_fields
+; how many scalar fields do you want to solve? should be the same as number_equations
 ; above.
 N_scalars=1;
 ; note you need to specify one value per scalar field for ALL the below parameters
