--- a/TESTING/conv/blob_convection_equi/blob-convection-equi.ini
+++ b/TESTING/conv/blob_convection_equi/blob-convection-equi.ini
@@ -14,7 +14,7 @@ number_block_nodes=17;
 ; ghost nodes for each block
 number_ghost_nodes=4;
 ; number of datafields in heavy data array
-number_data_fields=1;
+number_equations=1;
 ; threshold value for thresholding wavelet coefficients
 eps=1.0e-03;
 ; treelevel bounds
