--- a/TESTING/navier_stokes/filter/explicit_9pt/explicit_9pt.ini
+++ b/TESTING/navier_stokes/filter/explicit_9pt/explicit_9pt.ini
@@ -15,7 +15,7 @@ number_block_nodes=19;129;17;33;
 number_ghost_nodes=9;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=4;
+number_equations=4;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-1;1e-4;
 ; treelevel bounds
