--- a/TESTING/navier_stokes/funnel/3D/ion_funnel_3D.ini
+++ b/TESTING/navier_stokes/funnel/3D/ion_funnel_3D.ini
@@ -15,7 +15,7 @@ number_block_nodes=33;33;129;17;33;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=5;
+number_equations=5;
 ; threshold value for thresholding wavelet coefficients
 eps=1e-3;1e-4;
 ; treelevel bounds
