--- a/TESTING/navier_stokes/simple_geometry/triangle_adapt.ini
+++ b/TESTING/navier_stokes/simple_geometry/triangle_adapt.ini
@@ -14,7 +14,7 @@ number_block_nodes=33;129;17;33;
 number_ghost_nodes=4;
 ; number of equations / components of state vector. Note you have to properly
 ; adjust this value for the physics module that you use.
-number_data_fields=4;
+number_equations=4;
 ; threshold value for thresholding wavelet coefficients
 eps=0.3e2;1e-4;
 ; treelevel bounds
@@ -46,7 +46,7 @@ coarsening_indicator=threshold-state-vector;threshold-vorticity;
 eps_normalized=0;
 ; which components to use for coarsening_indicator? default is all components.
 ; active only if coarsening_indicator=threshold-state-vector. select the components, set as
-; many as number_data_fields
+; many as number_equations
 threshold_state_vector_component=1 1 1 0;
 
 
