some more cleaning up in wabbit core engine

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -1,7 +1,11 @@
-; WABBIT parameter file template.
+;#########################################################################################
+;#########################################################################################
+;######################## WABBIT PARAMETER FILE TEMPLATE #################################
+;#########################################################################################
 ; if you add new parameters, add them here.
 ; note values have to be declared "value=0;", with equal sign (=) and semicolon (;)
-
+;#########################################################################################
+;#########################################################################################
 [Domain]
 ; 2D or 3D problem?
 dim=2;
@@ -169,7 +173,7 @@ dissipation=1;
 ; case studies of the NStokes module:
 ; + simple_geometry: [triangle | cylinder | rhombus]
 ; + funnel
-; + shock_tube: [sod_shock_tube| standing_shock]
+; + shock_tube: [sod_shock_tube| standing_shock | moving_shock]
 ; + no: [pressure_blob | shear_layer]
 case=funnel;
 
@@ -191,11 +195,12 @@ inicond=pressure_blob;
 ; 5.)shear_layer
 ; 	 set initial conditions (rho_0,u_0,p_0) and the shear layer width from inifile;
 ; 6.)simple-shock
-;    produces standing shock (1D) in x direction, specify inicond_(pressure,velocity,density);
-; 6.)moving-shock
-;    produces moving shock (1D) in x direction with nomr(initial_velocity) specifies shock speed
+;    produces standing shock (1D) in x direction, specify inicond_(pressure,velocity,density,width);
+;    inicond_width quantifies the shock location in x direction
+; 7.)moving-shock
+;    produces moving shock (1D) in x direction with initial_velocity(1) specifies shock speed
 ;    specify inicond_(pressure,velocity,density,inicond_width)
-;    inicond_width is the location of the shock x=inicond_width*Lx
+;    inicond_width is the location of the shock
 inicond_width=0.01;
 initial_pressure=101330.0;  p_0
 initial_velocity=50.0 0.0 0; u_0
