--- a/TESTING/navier_stokes/simple_geometry/rhombus/rhombus_moving_shock.ini
+++ b/TESTING/navier_stokes/simple_geometry/rhombus/rhombus_moving_shock.ini
@@ -5,6 +5,8 @@
 [Domain]
 ; 2D or 3D problem?
 dim=2;
+; specify the length of the domain in every dimension
+;
 domain_size=0.1786 0.111 0;
 
 [Blocks]
@@ -132,7 +134,27 @@ case=simple_geometry;
 
 [Initial_Values]
 inicond=moving-shock;simple-shock;mask;zeros;pressure_blob;
-inicond_width=0.01;
+; initial conditions for the different szenarios:
+; 1.)mask:
+;	  inside penalized volume: velocity u=0,
+;                            pressure p=rho_0 Rs T_0,
+;   outside: velocity u=u_0 and pressure p=p_0;
+; 2.)zeros:
+;    sets initial velocitys to 0 regardles of initial_velocity
+; 3.)pressure_blob
+; 	 pressure blob with diameter inicond_width
+; 4.)sod_shock_tube
+; 	 sets initial conditions according to [Sod,1978]
+; 5.)shear_layer
+; 	 set initial conditions (rho_0,u_0,p_0) and the shear layer width from inifile;
+; 6.)simple-shock
+;    produces standing shock (1D) in x direction, specify inicond_(pressure,velocity,density,width);
+;    inicond_width quantifies the shock location in x direction
+; 7.)moving-shock
+;    produces moving shock (1D) in x direction with initial_velocity(1) specifies shock speed
+;    specify inicond_(pressure,velocity,density,inicond_width)
+;    inicond_width is the location of the shock
+inicond_width=0.01786;
 initial_pressure=21756.0;
 initial_velocity=430.0 0.0 0;
 initial_temperature=298.15;
