some more cleaning in NStokes

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -395,6 +395,7 @@ name=sod_shock_tube
 ;-------------------------------------------------------------------
 ; for moving and standing shocks,
 ; you have to provide the values for the left side of the shock:
+; the values of the right side are then computed from Rankine-Hugoniot conditions
 pressure_left=101330.0;
 velocity_left=50.0;
 temperature_left=200;
