ini_files_parser reades arrays of booleans, periodic bc flag in every space direction

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -9,12 +9,10 @@
 [Domain]
 ; 2D or 3D problem?
 dim=2;
-; size of computational domain. Important for both wabbit and the physics modules
+; box size of computational domain. [Lx Ly Lz]
 domain_size=1 1;
-; if this flag is set (1), then WABBIT assumes there are no boundaries, i.e. grid is continued
-; periodicaly
-; if flag is 0; WABBIT assumes pressents of BC on all domain_walls
-periodic_BC=1;
+; synchronization (off: 0/false/yes | on: 1/true/no) on [x y z] domain boundaries
+periodic_BC=0 0;
 
 
 [Blocks]
