simple boundary condition example in conv-diff module

--- a/PARAMS_template.ini
+++ b/PARAMS_template.ini
@@ -61,8 +61,7 @@ threshold_state_vector_component=1 1 0;
 ; if this flag is set (1), then blocks on max level have to coarsen, even if their
 ; details are significant. This is equivalent to ensuring dealiasing. Hence, if set to 1,
 ; wabbit will evaluate the right hand side of your equation on max_treelevel, but in the mesh
-; coarsening it will, regardless of
- the solution, downsample the result to max_treelevel-1. Your
+; coarsening it will, regardless of the solution, downsample the result to max_treelevel-1. Your
 ; expected precision is thus max_treelevel-1, but the computational cost (derivatives and timestep)
 ; is on max_treelevel.
 force_maxlevel_dealiasing=0;
@@ -150,7 +149,12 @@ T_swirl=5.0;
 u0x=1.0;
 u0y=1.0;
 u0z=0.0;
-
+; boundary condition:
+; Note: only used in case of non periodic BC
+boundary_type=constant-inflow;
+; constant-inflow: specifiy the N_scalars of the
+; boundary values at the inflow
+phi_boundary=0.0;
 
 
 
@@ -383,7 +387,7 @@ free_outlet_wall=1;
 ; the RHS euler equations and test the filter methods
 ; ------------------------------------------------------------------
 ; available shock configurations: [sod_shock_tube | moving-shock | standing-shock]
-name=sod_shock_tube
+name=sod_shock_tube;
 ; + sod_shock_tube: see Publication Gary A Sod.,1987
 ; + moving-shock:   - is a shock front which moves with speed Mach_shock
 ;                   - the statevector left and right of the shock is computed
@@ -400,7 +404,7 @@ velocity_left=50.0;
 temperature_left=200;
 density_left=1.645;
 ; and the speed of the shock wave for the moving shock
-shock_wave_speed=500
+shock_wave_speed=500;
 ; normal vector of the shock front:
 ; the normal vectors are parallel to the Standard basis vectors
 ; choose 1 for the normal vector e_1 (x-direction)
